test/semantics/programs/invalid/invalid-operation2.guav
# Should fail since incompatible operand types

x = true / true
